--- a/apunte/apunte.tex
+++ b/apunte/apunte.tex
@@ -79,7 +79,7 @@
 
 \noindent Apuntes de clases del curso de Procesamiento de Lenguaje Natural de la Universidad de Chile.\\ % License information
 
-\noindent El formato del apunte fue tomado del template de Jasmine Hao. \\
+\noindent El formato del apunte fue tomado del template de Jasmine Hao disponible en Overleaf. \\
 
 \noindent \textit{Borrador, \today} % Printing/edition date
 
